// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposals/List/Item Author Loading smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-success pt-1"
  >
    <path d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5a1.25 1.25 0 0 0 0 2.5M3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m5-7.75a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m5.75 2.5a2.25 2.25 0 1 1-4.5 0a2.25 2.25 0 0 1 4.5 0m-1.5 0a.75.75 0 1 0-1.5 0a.75.75 0 0 0 1.5 0">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      short title
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        1
      </li>
      <li class="mr-3 inline">
        opened 3 months ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5 skeleton">
              </div>
            </div>
            <div class="pl-0 inline-block">
              <div class="skeleton w-24 h-2.5">
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Long Details smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-success pt-1"
  >
    <path d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5a1.25 1.25 0 0 0 0 2.5M3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m5-7.75a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m5.75 2.5a2.25 2.25 0 1 1-4.5 0a2.25 2.25 0 0 1 4.5 0m-1.5 0a.75.75 0 1 0-1.5 0a.75.75 0 0 0 1.5 0">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      rather long title that goes on and on and on and on and on and on...
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline">
        opened a minute ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Long and No Spaces smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-success pt-1"
  >
    <path d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5a1.25 1.25 0 0 0 0 2.5M3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m5-7.75a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m5.75 2.5a2.25 2.25 0 1 1-4.5 0a2.25 2.25 0 0 1 4.5 0m-1.5 0a.75.75 0 1 0-1.5 0a.75.75 0 0 0 1.5 0">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      LongNameLongNameLongNameLongNameLongNameLongNameLongNameLongNameL...
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        1
      </li>
      <li class="mr-3 inline">
        opened 3 months ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Short Details smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-success pt-1"
  >
    <path d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5a1.25 1.25 0 0 0 0 2.5M3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m5-7.75a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m5.75 2.5a2.25 2.25 0 1 1-4.5 0a2.25 2.25 0 0 1 4.5 0m-1.5 0a.75.75 0 1 0-1.5 0a.75.75 0 0 0 1.5 0">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      short title
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        2
      </li>
      <li class="mr-3 inline">
        opened 7 days ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Status Applied smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-primary pt-1"
  >
    <path d="M 3.25 1 A 2.25 2.25 0 0 1 4 5.372 v 5.256 a 2.251 2.251 0 1 1 -1.5 0 V 5.372 A 2.251 2.251 0 0 1 3.25 1 Z M 2.5 3.25 a 0.75 0.75 0 1 0 1.5 0 a 0.75 0.75 0 0 0 -1.5 0 M 3.25 12 a 0.75 0.75 0 1 0 0 1.5 a 0.75 0.75 0 0 0 0 -1.5">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      short title
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        2
      </li>
      <li class="mr-3 inline">
        opened 7 days ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Status Closed smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-neutral-content pt-1"
  >
    <path d="M3.25 1A2.25 2.25 0 0 1 4 5.372v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.251 2.251 0 0 1 3.25 1m9.5 14a2.25 2.25 0 1 1 0-4.5a2.25 2.25 0 0 1 0 4.5M2.5 3.25a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0M3.25 12a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m9.5 0a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5M14 7.5a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m0-4.25a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      short title
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        2
      </li>
      <li class="mr-3 inline">
        opened 7 days ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Status Draft smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 flex-none fill-neutral-content pt-1"
  >
    <path d="M3.25 1A2.25 2.25 0 0 1 4 5.372v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.251 2.251 0 0 1 3.25 1m9.5 14a2.25 2.25 0 1 1 0-4.5a2.25 2.25 0 0 1 0 4.5M2.5 3.25a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0M3.25 12a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m9.5 0a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5M14 7.5a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m0-4.25a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0">
    </path>
  </svg>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      short title
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        2
      </li>
      <li class="mr-3 inline">
        opened 7 days ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item Status Loading smoke-test 1`] = `
<li class="flex p-2 pt-4 cursor-pointer hover:bg-base-200">
  <div class="skeleton h-5 w-5 flex-none pt-1">
  </div>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content"
  >
    <div class="text-sm text-base-content">
      short title
    </div>
    <ul class="pt-2">
      <li class="mr-3 inline align-middle">
        <svg xmlns="http://www.w3.org/2000/svg"
             class="inline-block h-3 w-3 flex-none fill-base-content pt-0"
             viewbox="0 0 16 16"
        >
          <path d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z">
          </path>
        </svg>
        2
      </li>
      <li class="mr-3 inline">
        opened 7 days ago
      </li>
      <li class="inline">
        <div class="inline-block">
          <div class="text-xs align-middle">
            <div class="avatar inline-block align-middle">
              <div class="rounded inline-block h-3.5 w-3.5">
                <img class="my-0"
                     src="../test-profile-image.jpg"
                     alt="DanConwayDev"
                >
              </div>
            </div>
            <div class="pl-0 inline-block">
              DanConwayDev
            </div>
          </div>
        </div>
      </li>
    </ul>
  </a>
</li>
`;

exports[`Proposals/List/Item loading smoke-test 1`] = `
<li class="flex p-2 pt-4 ">
  <div class="skeleton h-5 w-5 flex-none pt-1">
  </div>
  <a href="/repo//proposal/"
     class="ml-3 grow overflow-hidden text-xs text-neutral-content pointer-events-none"
  >
    <div class="skeleton h-5 w-60 flex-none pt-1">
    </div>
    <div class="skeleton mb-1 mt-3 h-3 w-40 flex-none">
    </div>
  </a>
</li>
`;
